--- a/compute_metrics_on_graph.ipynb
+++ b/compute_metrics_on_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading graph\n",
+      "graph loaded\n",
+      "MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# loading the networkx graph\n",
     "nxG = None\n",
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,24 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining graph_tool methods\n",
     "\n",
     "def convert_networkx_to_graphtool(nx_graph):\n",
-    "    print(\"part_1\")\n",
+    "    # print(\"part_1\")\n",
     "    gt_graph = gt.Graph(directed=nx_graph.is_directed())\n",
-    "    print(\"part_2\")\n",
+    "    # print(\"part_2\")\n",
     "    gt_graph.add_vertex(len(nx_graph))\n",
     "\n",
     "    # Create a mapping between original labels and new integer labels\n",
-    "    print(\"part_3\")\n",
+    "    # print(\"part_3\")\n",
     "    label_to_index = {label: index for index, label in enumerate(nx_graph.nodes)}\n",
     "    index_to_label = {index: label for index, label in enumerate(nx_graph.nodes)}\n",
     "\n",
-    "    print(\"part_4\")\n",
+    "    print(\"adding edges\")\n",
     "    for edge in tqdm(nx_graph.edges):\n",
     "        gt_graph.add_edge(label_to_index[edge[0]], label_to_index[edge[1]])\n",
     "\n",
@@ -147,12 +157,54 @@
     "    page_rank = {}\n",
     "    for v in g.vertices():\n",
     "        page_rank[int(v)] = pr[v]\n",
-    "    return page_rank"
+    "    return page_rank\n",
+    "\n",
+    "    \n",
+    "def SI_infection_simulation(g, n, t, label_probabilities=None):\n",
+    "    N = g.num_vertices()\n",
+    "    infected_count = [0] * t\n",
+    "\n",
+    "    def infect_node(start_node, timesteps):\n",
+    "        infected = defaultdict(bool)\n",
+    "        infected[start_node] = True\n",
+    "        new_infected = [start_node]\n",
+    "        count = 1\n",
+    "\n",
+    "        for t in range(timesteps):\n",
+    "            if count >= n:\n",
+    "                break\n",
+    "            next_infected = []\n",
+    "\n",
+    "            for node in new_infected:\n",
+    "                neighbors = [v for v in node.out_neighbors()]\n",
+    "                for neighbor in neighbors:\n",
+    "                    if not infected[int(neighbor)]:\n",
+    "                        if label_probabilities:\n",
+    "                            infector_label = g.vp.label[node]\n",
+    "                            infected_label = g.vp.label[neighbor]\n",
+    "                            infection_prob = label_probabilities[(infector_label, infected_label)]\n",
+    "                        else:\n",
+    "                            infection_prob = 1\n",
+    "\n",
+    "                        if random() < infection_prob:\n",
+    "                            infected[int(neighbor)] = True\n",
+    "                            next_infected.append(neighbor)\n",
+    "                            count += 1\n",
+    "                            if count >= n:\n",
+    "                                break\n",
+    "\n",
+    "            new_infected = next_infected\n",
+    "            infected_count[t] += count\n",
+    "\n",
+    "    for node in tqdm(g.vertices()):\n",
+    "        infect_node(node, t)\n",
+    "\n",
+    "    return [count / N for count in infected_count]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +256,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "computing graph  only_users\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2391846.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 33732 nodes and 104702 edges\n",
+      "part_1\n",
+      "part_2\n",
+      "part_3\n",
+      "part_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 104702/104702 [00:00<00:00, 311750.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_cards\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2483847.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 152550 nodes and 232768 edges\n",
+      "part_1\n",
+      "part_2\n",
+      "part_3\n",
+      "part_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 232768/232768 [00:00<00:00, 312711.72it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_devices\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2504828.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 85183 nodes and 159728 edges\n",
+      "part_1\n",
+      "part_2\n",
+      "part_3\n",
+      "part_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 159728/159728 [00:00<00:00, 315240.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_ips\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2609884.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 619587 nodes and 1593651 edges\n",
+      "part_1\n",
+      "part_2\n",
+      "part_3\n",
+      "part_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1593651/1593651 [00:05<00:00, 307849.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_cards_without_user_to_user_edges\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2589482.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 152550 nodes and 0 edges\n",
+      "part_1\n",
+      "part_2\n",
+      "part_3\n",
+      "part_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n"
+     ]
+    }
+   ],
    "source": [
     "# the experiment then goes like this:\n",
     "# 1. instantiate the graphs you're interested in\n",
@@ -238,13 +507,26 @@
     "\n",
     "results = {}\n",
     "for graph_name, graph_info in graphs_we_want.items():\n",
+    "    print(\"\\n\\ncomputing graph \", graph_name)\n",
     "    # 1. instantiate the graphs you're interested in\n",
     "    nx_graph = filter_graph(nxG, graph_info['node_labels_to_keep'], graph_info['edges_to_keep'])\n",
     "    # 2. run analysis on each, only keep the data_dict\n",
     "    gt_graph, label_to_index, index_to_label = convert_networkx_to_graphtool(nx_graph)\n",
     "    result = compute_metrics(gt_graph, index_to_label)\n",
     "    # 3. put the dicts together in a dict with simple names\n",
-    "    results[graph_name] = result\n"
+    "    results[graph_name] = result\n",
+    "\n",
+    "import json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"compute_metrics_results.json\", 'w') as f:\n",
+    "    json.dump(results, f, indent=4)"
    ]
   }
  ],
@@ -264,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
