--- a/compute_metrics_on_graph.ipynb
+++ b/compute_metrics_on_graph.ipynb
@@ -199,7 +199,53 @@
     "    for node in tqdm(g.vertices()):\n",
     "        infect_node(node, t)\n",
     "\n",
-    "    return [count / N for count in infected_count]"
+    "    return [count / N for count in infected_count]\n",
+    "\n",
+    "def SI_infection_simulation_timestamps(g, n, t, label_probabilities=None):\n",
+    "    N = g.num_vertices()\n",
+    "    infected_count = [0] * t\n",
+    "\n",
+    "    def infect_node(start_node, timesteps):\n",
+    "        infected = defaultdict(bool)\n",
+    "        infected[start_node] = True\n",
+    "        new_infected = [start_node]\n",
+    "        count = 1\n",
+    "\n",
+    "        for current_t in range(timesteps):\n",
+    "            if count >= n:\n",
+    "                break\n",
+    "            next_infected = []\n",
+    "\n",
+    "            for node in new_infected:\n",
+    "                neighbors = [(v, g.ep.timestamps[e]) for e, v in zip(node.out_edges(), node.out_neighbors())]\n",
+    "\n",
+    "                for neighbor, timestamps in neighbors:\n",
+    "                    if not infected[int(neighbor)] and current_t in timestamps:\n",
+    "                        if label_probabilities:\n",
+    "                            infector_label = g.vp.label[node]\n",
+    "                            infected_label = g.vp.label[neighbor]\n",
+    "                            infection_prob = label_probabilities[(infector_label, infected_label)]\n",
+    "                        else:\n",
+    "                            infection_prob = 1\n",
+    "\n",
+    "                        if random() < infection_prob:\n",
+    "                            infected[int(neighbor)] = True\n",
+    "                            next_infected.append(neighbor)\n",
+    "                            count += 1\n",
+    "                            if count >= n:\n",
+    "                                break\n",
+    "\n",
+    "            new_infected = next_infected\n",
+    "            infected_count[current_t] += count\n",
+    "\n",
+    "    for node in g.vertices():\n",
+    "        infect_node(node, t)\n",
+    "\n",
+    "    return [count / N for count in infected_count]\n",
+    "\n",
+    "# Example usage:\n",
+    "# label_probabilities = {(\"A\", \"A\"): 0.9, (\"A\", \"B\"): 0.5, (\"B\", \"A\"): 0.5, (\"B\", \"B\"): 0.9}\n",
+    "# infected_counts = SI_infection_simulation_timestamps(g, 10, 100, label_probabilities)"
    ]
   },
   {
@@ -521,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
