added saving to disk, and the fraudulent label to the results

--- a/compute_metrics_on_graph.ipynb
+++ b/compute_metrics_on_graph.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -433,6 +433,16 @@
       "\n",
       "\n",
       "computing graph  only_users\n",
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_cards\n",
       "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
      ]
     },
@@ -440,7 +450,152 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 789856/789856 [00:00<00:00, 2376665.75it/s]\n"
+      "100%|██████████| 789856/789856 [00:00<00:00, 2550787.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 152550 nodes and 232768 edges\n",
+      "adding edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 232768/232768 [00:00<00:00, 331333.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_devices\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2378918.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 85183 nodes and 159728 edges\n",
+      "adding edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 159728/159728 [00:00<00:00, 339695.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_ips\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2666744.09it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 619587 nodes and 1593651 edges\n",
+      "adding edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1593651/1593651 [00:04<00:00, 327931.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n",
+      "\n",
+      "\n",
+      "computing graph  users_and_cards_without_user_to_user_edges\n",
+      "graph before filtering:  MultiDiGraph with 789856 nodes and 1776743 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 789856/789856 [00:00<00:00, 2468894.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph after filtering: MultiDiGraph with 152550 nodes and 0 edges\n",
+      "adding edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing closeness\n",
+      "computing degree\n",
+      "computing betweenness\n",
+      "computing eigenvector_centrality\n",
+      "computing SIS_infection_prob\n",
+      "computing pagerank\n",
+      "computation done\n"
      ]
     }
    ],
@@ -455,22 +610,22 @@
     "        node_labels_to_keep=['User'],\n",
     "        edges_to_keep=[],\n",
     "    ),\n",
-    "    # \"users_and_cards\": dict(\n",
-    "    #     node_labels_to_keep=['User', 'Card'],\n",
-    "    #     edges_to_keep=[],\n",
-    "    # ),\n",
-    "    # \"users_and_devices\": dict(\n",
-    "    #     node_labels_to_keep=['User', 'Device'],\n",
-    "    #     edges_to_keep=[],\n",
-    "    # ),\n",
-    "    # \"users_and_ips\": dict(\n",
-    "    #     node_labels_to_keep=['User', 'IP'],\n",
-    "    #     edges_to_keep=[],\n",
-    "    # ),\n",
-    "    # \"users_and_cards_without_user_to_user_edges\": dict(\n",
-    "    #     node_labels_to_keep=['User', 'Card'],\n",
-    "    #     edges_to_keep=[('User', 'Card')],\n",
-    "    # ),\n",
+    "    \"users_and_cards\": dict(\n",
+    "        node_labels_to_keep=['User', 'Card'],\n",
+    "        edges_to_keep=[],\n",
+    "    ),\n",
+    "    \"users_and_devices\": dict(\n",
+    "        node_labels_to_keep=['User', 'Device'],\n",
+    "        edges_to_keep=[],\n",
+    "    ),\n",
+    "    \"users_and_ips\": dict(\n",
+    "        node_labels_to_keep=['User', 'IP'],\n",
+    "        edges_to_keep=[],\n",
+    "    ),\n",
+    "    \"users_and_cards_without_user_to_user_edges\": dict(\n",
+    "        node_labels_to_keep=['User', 'Card'],\n",
+    "        edges_to_keep=[('User', 'Card')],\n",
+    "    ),\n",
     "}\n",
     "\n",
     "results = {}\n",
@@ -485,18 +640,27 @@
     "\n",
     "    # 2. run analysis on each, only keep the data_dict\n",
     "    result = compute_metrics(gt_graph, index_to_label)\n",
+    "\n",
+    "    # 2.1 add the \"fraudulent\" label to the result dict\n",
+    "    attrs = nx.get_node_attributes(nx_graph, 'properties')\n",
+    "    for node_name in result.keys():\n",
+    "        if \"fraudMoneyTransfer\" in attrs[node_name]:\n",
+    "            result[node_name][\"isFraudulent\"] = bool(attrs[node_name]['fraudMoneyTransfer'])\n",
+    "            result[node_name][\"isUser\"] = True\n",
+    "        else:\n",
+    "            result[node_name][\"isUser\"] = False\n",
     "    \n",
     "    # 3. put the dicts together in a dict with simple names\n",
-    "    # results[graph_name] = result\n",
-    "    results = si_infection_simulation(nx_graph)\n",
-    "    print(results)\n",
+    "    results[graph_name] = result\n",
+    "    # results = si_infection_simulation(nx_graph)\n",
+    "    # print(results)\n",
     "# nx_graph = filter_graph(nxG, graphs_we_want[\"users_and_cards\"]['node_labels_to_keep'], graphs_we_want[\"users_and_cards\"]['edges_to_keep'])\n",
     "# gt_graph, label_to_index, index_to_label = convert_networkx_to_graphtool(nx_graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,12 +688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(\"compute_metrics_results.json\", 'w') as f:\n",
-    "#     json.dump(results, f, indent=4)"
+    "with open(\"compute_metrics_results.json\", 'w') as f:\n",
+    "    json.dump(results, f, indent=4)"
    ]
   }
  ],
